syntax = "proto3";
package pb.common;

option go_package = "gitlab.com/vectorup/asset-pb/go/common";


enum SCENARIO_TYPE {
    S_PB_FIRST_MUST_ZORE = 0;
    S_INIT           = 1;     // init role
    S_CHANCE         = 2;     // 机会
    S_BIG_BUSINESS   = 3;     // 大买卖
    S_SMALL_BUSINESS = 4;     // 小生意

    S_MARKET_INFO    = 5; // 市场信息
    S_ACCIDENT       = 6; // 意外
    S_CHARITY        = 7   [deprecated=true]; // 慈善
    S_UNEMPLOYMENT   = 8; // 失业
    S_PAYDAY         = 9; // 结算(日)
    S_BABY           = 10; // 生小孩
    S_WAGE_HIKE     = 11; // 加薪
    S_MARKET_CHANGE = 12;  // 市场波动，资产价格变化 / 资产清算 etc...
}

enum PayDayType {
    PAYDAY_PLACEHOLDER = 0;
    // 没有经过结算日
    NOT_PAY_DAY     = 1;
    // 停留在结算日
    PAY_DAY         = 2;
    // 经过结算日
    PASS_BY_PAY_DAY = 3;
}

// 支付类型，用来在支付意外消费时标识应如何支付
enum PaymentType {
    PAYMENT_TYPE_PLACEHOLDER = 0;
    // 现金能够支付
    PAYMENT_TYPE_CASH = 1;
    // 贷款能够支付
    PAYMENT_TYPE_LOAN = 2;
    // 不能支付
    PAYMENT_TYPE_CANNOT_PAY = 3;
}

enum OnlineState {
    // 未知状态
    OnlineState_unkown = 0;
    // 在线
    online = 1;
    // 离线
    afk = 2;
    // 托管中，没用了
    brb = 3 [deprecated=true];
    // 已经退出游戏(破产后玩家可能会退出游戏)
    quit = 4;
}

// 创建房间时的匹配类型
enum MatchType {
    UNKNOWN = 0;
    // 匹配塞
    STANDARD = 1;
    // 排位赛
    RANK = 2;
    // 财务报表训练游戏
    TRAINING = 3;
}
